modifies javassist.util.proxy.DefinePackageHelper to be compatible to Java 11. It also adds a javadoc comment to CtClass#toClass() to recommend the users to use #toClass(Class) or #toClass(Lookup).